--- a/Evaluacion.html
+++ b/Evaluacion.html
@@ -11,6 +11,16 @@
         <h1>Casas</br>Tropicales</h1>
     </div>
 
+    <div class="container1">
+        <img src="img/playa1.1.webp" width="1950px" height="800px">
+        <h1>-WIN-</br>Casas de </br> 5 estrellas</br> te esperan</h1>
+        <p>8 dias para relajarte de verdad</p>
+    </div>
 
+    <div class="container2">
+        <p>Tu y un amigo disfrutaran de una noche en una casa de cinco estrellas. Cinco noches en una glamurosa casa con piscina en frente</br> de la playa con bebidas y comidas con todo incluido.</p>
+
+
+    </div>
 </body>
 </html>
