--- a/Evaluacion.html
+++ b/Evaluacion.html
@@ -36,5 +36,8 @@
         <a><img src="img/piscina2.jpg" whidt="150px" height="150px"></a>
         <a><img src="img/piscina3.jpg" whidt="150px" height="150px"></a>
     </div>
+    <div class="button1">
+        <button>Entrar a la web</button>
+    </div>
 </body>
 </html>
