--- a/Evaluacion.html
+++ b/Evaluacion.html
@@ -15,6 +15,17 @@
         <img src="img/playa1.1.webp" width="1950px" height="800px">
         <h1>-WIN-</br>Casas de </br> 5 estrellas</br> te esperan</h1>
         <p>8 dias para relajarte de verdad</p>
+        <form>
+            <label>Nombre:</label><br/>
+            <input type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre"/><br/>
+            <label>Apellido:</label><br/>
+            <input type="text" name="apellido" id="apellido" placeholder="Ingrese su apellido"/><br/>s
+            <label>correo:</label><br/>
+            <input type="email" name="correo" id="correo" placeholder="ejemplo@ejemplo.cl"/><br/>
+            <button id="b2">Entrar a la web</button>
+            
+        </form>
+
     </div>
 
     <div class="container2">
